--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ testcases/
 .vscode
 
 # Chore
+*.pdf
 SysY-Compiler-2024Fall-PKU
 2024年编译原理课程实践报告-template.md
 compiler_principles_lab_note-zh.mdx
